Revision history for DBIx::Class::Sims (ordered by revision number).

0.05 Sep 20 2013 14:30:00 PDT
   - Added the following column types:
      - ip_address

0.04 Sep 20 2013 14:30:00 PDT
   - Split out the included types documentation into its own POD
   - Added "value" as an sim option.
      - This behaves like default_value without requiring a default_value on
        the column.
   - Added the following column types:
      - us_firstname
      - us_lastname
      - email_address
   - us_name uses us_firstname and us_lastname, plus sometimes provides a middle
     initial.

0.03 Sep 20 2013 08:00:00 PDT
   - Added missing files to the MANIFEST
      - Which included this file
   - Added the following column types:
      - us_city

0.02 Sep 19 2013 17:30:00 PDT
   - Removed unneeded import of Data::Dumper
   - set_sim_type() now takes a hashref, not a hash.
      - The documentation in 0.01 was correct, the code was not.
   - Added the following column types:
      - us_address
      - us_county
      - us_name
      - us_phone
      - us_ssntin
      - us_state

0.01 Sep 18 2013 20:00:00 PDT
   - Initial version